[tool.poetry]
name = "aoirint-mcping-server"
version = "0.0.0"
description = ""
authors = ["aoirint <aoirint@gmail.com>"]
readme = "README.md"
packages = [{include = "aoirint_mcping_server"}]

[tool.poetry.dependencies]
python = "~3.11"
pydantic = "^2.7.1"
sqlalchemy = "^2.0.30"
psycopg2-binary = "^2.9.9"

[tool.poetry.group.web-api.dependencies]
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}

[tool.poetry.group.bedrock-updater.dependencies]
schedule = "^1.2.2"
mcstatus = "^11.1.1"

[tool.poetry.group.java-updater.dependencies]
schedule = "^1.2.2"
mcstatus = "^11.1.1"

[tool.poetry.group.dev.dependencies]
mypy = "^1.10.0"
pyinstaller = "^6.7.0"
wheel = "^0.43.0"
types-pyyaml = "^6.0.12.20240311"
ruff = "^0.8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
