[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
  "E",  # pycodestyle errors
  "W",  # pycodestyle warnings
  "F",  # pyflakes
  "I",  # isort
  "B",  # flake8-bugbear
  "C4",  # flake8-comprehensions
  "UP",  # pyupgrade
]

[tool.mypy]
strict = true


[tool.poetry]
name = "aoirint-mcping-server"
version = "0.0.0"
description = ""
authors = ["aoirint <aoirint@gmail.com>"]
readme = "README.md"
packages = [{include = "aoirint_mcping_server"}]

[tool.poetry.dependencies]
python = "~3.12"
pydantic = "^2.10.2"
sqlalchemy = "^2.0.36"
psycopg2-binary = "^2.9.9"

[tool.poetry.group.web-api.dependencies]
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}

[tool.poetry.group.bedrock-updater.dependencies]
schedule = "^1.2.2"
mcstatus = "^11.1.1"

[tool.poetry.group.java-updater.dependencies]
schedule = "^1.2.2"
mcstatus = "^11.1.1"

[tool.poetry.group.dev.dependencies]
mypy = "^1.10.0"
pyinstaller = "^6.7.0"
wheel = "^0.43.0"
types-pyyaml = "^6.0.12.20240311"
ruff = "^0.8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
